CHANGES IN FLTK 1.1.0

	- Fixed some case problems in includes for the MacOS X
	  code.
	- Fl_Widget::handle() returned 1 for FL_ENTER and
	  FL_LEAVE events, which caused some compatibility
	  problems with 1.0 code.
	- Fl_Box::handle() now returns 1 for FL_ENTER and
	  FL_LEAVE events so that tooltips will work with Fl_Box
	  widgets.
	- Some source files still defined strcasecmp and
	  strncasecmp under WIN32.
	- Some source files still used the "false" and "true"
	  C++ keywords, even though several of our "supported"
	  C++ compilers don't support them.  Using 0 and 1 until
	  FLTK 2.0 (which uses the bool type instead of int for
	  any boolean values...)
	- Minor Fl_Color revamping, so that color constants map
	  to the color cube and FL_FOREGROUND_COLOR,
	  FL_BACKGROUND_COLOR, FL_BACKGROUND2_COLOR,
	  FL_INACTIVE_COLOR, and FL_SELECTION_COLOR map to the
	  user-defined colors.


CHANGES IN FLTK 1.1.0b13

	- Fixed a bug in the Xft support in Fl_Window::hide()
	  (the config header wasn't included, so the Xft code
	  wasn't getting called)
	- Xdbe support must now be enabled explicitly using
	  --enable-xdbe due to inconsistent bugs in XFree86 and
	  others.
	- Windows resized by a program would revert to their
	  original size when moved under WIN32.
	- Cygwin can only compile the new WIN32 drag-n-drop code
	  using GCC 3.x.
	- Tooltips now appear for inactive and output widgets.
	- Tooltips no longer steal keyboard events other than
	  ESCape.
	- Tooltips are no longer delayed when moving between
	  adjacent widgets.
	- fl_beep(FL_BEEP_DEFAULT) now uses the PC speaker under
	  Windows (0xFFFFFFFF) rather than an event sound.
	- The configure script didn't include the -mwindows or
	  -DWIN32 compiler options in the output of fltk-config
	  when using the Cygwin tools.
	- Fl_Output didn't take input focus when needed, so it
	  was unable to support CTRL-C for copying text in the
	  field and did not unhighlight selections when the
	  widget lost focus.